<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.foodlabelapp.foodlabel.UserInputActivity"
    android:id="@+id/UserInputLayout">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedbacktitle"
        android:textSize="10pt">
    </TextView>
    <EditText
        android:id="@+id/EditTextName"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackname"
        android:inputType="textPersonName"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/EditTextAge"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackage"
        android:inputType="textPersonName"
        android:layout_width="fill_parent">
    </EditText>



    <Spinner
        android:id="@+id/SpinnerActivityRange1"
        android:layout_height="wrap_content"
        android:prompt="@string/feedbackactivity1"
        android:layout_width="fill_parent"
        android:entries="@array/actvitylist1">
    </Spinner>

    <Spinner
        android:id="@+id/SpinnerActivityRange2"
        android:layout_height="wrap_content"
        android:prompt="@string/feedbackactivity2"
        android:layout_width="fill_parent"
        android:entries="@array/actvitylist2">
    </Spinner>
    <!--<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:id="@+id/UnitLayout">-->
            <!--<RadioButton android:id="@+id/radio_imperial"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/imperial"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
            <!--<RadioButton android:id="@+id/radio_metric"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/metric"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
        <!--</LinearLayout>-->

    <!--</RadioGroup>-->
<!--change layout on metric -->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="horizontal"-->
        <!--android:id="@+id/HeightLayout">-->
        <!--<EditText-->
            <!--android:id="@+id/EditTextHeightFeet"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/feedbackheightfeet"-->
            <!--android:inputType="numberDecimal"-->
            <!--android:layout_width="fill_parent">-->
        <!--</EditText>-->

        <!--<EditText-->
            <!--android:id="@+id/EditTextHeightInches"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/feedbackheightinches"-->
            <!--android:inputType="numberDecimal"-->
            <!--android:layout_width="fill_parent">-->
        <!--</EditText>-->

    <!--</LinearLayout>-->

    <EditText
        android:id="@+id/EditTextWeight"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackweight"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent">
    </EditText>
    <EditText
        android:id="@+id/EditTextHeight"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackheight"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent">
    </EditText>

    <Spinner
        android:id="@+id/SpinnerFeedbackType"
        android:layout_height="wrap_content"
        android:prompt="@string/feedbacktype"
        android:layout_width="fill_parent"
        android:entries="@array/feedbacktypelist">
    </Spinner>
    <!--<EditText-->
        <!--android:id="@+id/EditTextFeedbackBody"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/feedbackbody"-->
        <!--android:inputType="textMultiLine"-->
        <!--android:lines="5"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_below="@+id/TextViewTitle"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->
    <!--</EditText>-->
    <!--<CheckBox-->
        <!--android:id="@+id/CheckBoxResponse"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/feedbackresponse"-->
        <!--android:layout_width="fill_parent">-->
    <!--</CheckBox>-->
    <Button
        android:id="@+id/ButtonSendFeedback"
        android:layout_height="wrap_content"
        android:text="@string/feedbackbutton"
        android:onClick="sendFeedback"
        android:layout_width="fill_parent">
    </Button>
</LinearLayout>
